Avance en ejercicio 2 y 3

--- a/Ejercicio 3/Ejercicio 3.tex
+++ b/Ejercicio 3/Ejercicio 3.tex
@@ -151,7 +151,7 @@ Se implementó el circuito de la Figura (\ref{fig:cirasinc}) en un PCB. Para ell
 Se procede a simular la situación ejemplificada previamente, es decir con  $a = 0$ y $c = 1$, alternando el valor de $b$ entre $0$ y $1$. Dicha variación se simula utilizando un generador de ondas cuadradas, el cuál oscila entre $0 \ V$ y $5 \ V$. Observando tanto la entrada como las dos salidas previamente mencionadas, se obtiene lo siguiente: 
 \begin{figure}[H]
 \centering
-	\includegraphics[width=0.8\textwidth, trim = {0 0 0 2cm},clip]{Imagenes/scope_5.png}
+	\includegraphics[width=0.8\textwidth, trim = {0 0 0 2cm},clip]{ImagenesEjercicio3/scope_5.png}
 	\caption{Salida con glitch (rosa) y sin glitch (violeta) variando $b$ (amarillo).}
 	\label{fig:medicion}
 \end{figure}
