--- a/Ejercicio 2/Ejercicio 2.tex
+++ b/Ejercicio 2/Ejercicio 2.tex
@@ -177,8 +177,144 @@ Es de esta forma que se analiza el fanout de la conexión presentada en la Figur
 	FO = Min \left( \frac{I_{OH}}{I_{IH}}, \ \frac{I_{OL}}{I_{IL}} \right) = Min \left( \left| \frac{-4 \ mA}{20 \ \mu A} \right|, \ \left| \frac{4 \ mA}{-0.4 \ mA}\right| \right) = Min \left( 200, \ 10000 \right) = 200
 \end{equation*}
 
+Luego, se procede a reemplazar la compuerta 74HC02 por la de tecnología HTC. De esta forma, y nuevamente mediante lo expresado en la Tabla (\ref{tabla:vinout}), se obtiene lo siguiente:
+
+\begin{table}[H]
+\centering
+\begin{tabular}{|c|c|c|c|c|}
+\hline
+\textbf{In} & \textbf{Out} & $\mathbf{V_{CC}}$ \textbf{[V]} & $\mathbf{NM_{High}}$ \textbf{[V]} & $\mathbf{NM_{Low}} $\textbf{[V]} \\ \hline
+74LS02      & 74HCT02       & 4.5                            & 1.84                              & 0.47                              \\ 
+74HCT02      & 74LS02       & 4.5                            & 0.7                             & 0.3     		                    \\ \hline
+\end{tabular}
+\caption{Margen de ruido para combinaciones de tecnologías HC y LS.}
+\label{tabla:nm}
+\end{table}
+
+De manera análoga al caso anterior, se confecciona el siguiente gráfico:
+
+\begin{figure}[H]
 \begin{center}
-	\textcolor{red}{\textbf{PREGUNTAR.}}
+\begin{tikzpicture}[yscale=1]
+	
+	\node [below] at (0,0) {Out: 74HCT02};	
+	
+	%Límites de OUT
+	\draw[-][draw=gray, line width=2mm] (0,3.84) -- (0,4.5);
+	\draw[-][draw=black, very thick] (-0.2,3.84) -- (0.2,3.84)  node[label=right:3.84 V](){};
+	\draw[-][draw=gray, line width=2mm] (0,0) -- (0,0.33);	
+	\draw[-][draw=black, very thick] (-0.2,0.33) -- (0.2,0.33) node[label=right:0.33 V](){};
+
+	%Eje de OUT
+	\node [above] at (0.2,4.5) {4.5 V};
+	\draw[-][draw=black, very thick] (0,0) -- (0,4.5);
+	\draw[-][draw=black, very thick] (-0.1,2.25) -- (0.1,2.25) node[label=left:2.25 V](){};
+	\draw[-][draw=black, very thick] (-0.2,0) -- (0.2,0);
+	\draw[-][draw=black, very thick] (-0.2,4.5) -- (0.2,4.5);
+	
+	%Labels High y Low
+	\draw[-][draw=black, very thick] (-0.4,4.5) -- (-0.6,4.5);
+	\draw[-][draw=black, very thick] (-0.6,4.5) -- (-0.6,3.84);
+	\draw[-][draw=black, very thick] (-0.4,3.84) -- (-0.6,3.84);
+	\node [left] at (-0.6,4.17) {High};
+
+	\draw[-][draw=black, very thick]	 (-0.4,0) -- (-0.6,0);
+	\draw[-][draw=black, very thick]	 (-0.6,0) -- (-0.6,0.33);
+	\draw[-][draw=black, very thick]	 (-0.6,0.33) -- (-0.4,0.33);
+	\node [left] at (-0.6,0.215) {Low};
+
+	%Límites de IN
+	\node [below] at (5,0) {In: 74LS02};
+	\draw[-][draw=gray, line width=2mm] (5,0) -- (5,0.8);
+	\draw[-][draw=gray, line width=2mm] (5,2) -- (5,4.5);
+	\draw[-][draw=black, very thick] (5.2,0.8) -- (4.8,0.8) node[label=left:0.8 V](){};
+	\node [above] at (5.2,4.5) {4.5 V};
+
+	%Ejes de IN y labels
+	\draw[-][draw=black, very thick] (5,0) -- (5,4.5);
+	\draw[-][draw=black, very thick] (4.9,2.25) -- (5.1,2.25);
+	\draw[-][draw=black, very thick] (4.8,0) -- (5.2,0);
+	\draw[-][draw=black, very thick] (4.8,4.5) -- (5.2,4.5);
+	\draw[-][draw=black, very thick] (5.4,0) -- (5.6,0);
+	\draw[-][draw=black, very thick] (4.8,2) -- (5.2,2);
+	\draw[-][draw=black, very thick] (5.4,0.8) -- (5.6,0.8);
+	\draw[-][draw=black, very thick] (5.6,0) -- (5.6,0.8);
+	\node [right] at (5.6,0.4) {Low};
+
+	\draw[-][draw=black, very thick] (5.4,2) -- (5.6,2);
+	\node [left] at (4.8,2) {2 V};	
+	\draw[-][draw=black, very thick] (5.4,4.5) -- (5.6,4.5);
+	\draw[-][draw=black, very thick] (5.6,2) -- (5.6,4.5);
+	\node [right] at (5.6,3.25) {High};	
+\end{tikzpicture}
+\end{center}
+\caption{Comparación de tecnologías con HCT a la salida y LS a la entrada.}
+\label{fig:hctls}
+\end{figure}
+
+\begin{figure}[H]
+\begin{center}
+\begin{tikzpicture}[yscale=1]
+	\node [below] at (0,0) {Out: 74LS02};
+	
+	\draw[-][draw=gray, line width=2mm] (0,2.7) -- (0,4.5);
+	\draw[-][draw=gray, line width=2mm] (0,0) -- (0,0.5);	
+	\draw[-][draw=black, very thick] (-0.2,2.7) -- (0.2,2.7);
+	\draw[-][draw=black, very thick] (-0.2,0.5) -- (0.2,0.5) node[label=right:0.5 V](){};
+
+	\draw[-][draw=black, very thick] (0,0) -- (0,4.5);
+	\draw[-][draw=black, very thick] (-0.1,2.25) -- (0.1,2.25) node[label=left:2.25 V](){};
+	\draw[-][draw=black, very thick] (-0.2,0) -- (0.2,0);
+	\draw[-][draw=black, very thick] (-0.2,4.5) -- (0.2,4.5);
+	
+	\draw[-][draw=black, very thick] (-0.4,4.5) -- (-0.6,4.5);
+	\draw[-][draw=black, very thick] (-0.6,4.5) -- (-0.6,2.7);
+	\draw[-][draw=black, very thick] (-0.4,2.7) -- (-0.6,2.7);
+	\node [left] at (-0.6,3.6) {High};
+	\node [above] at (0.2,4.5) {4.5 V};
+	
+	\node [right] at (0.2,2.7) {2.7 V};
+	
+	\draw[-][draw=black, very thick]	 (-0.4,0) -- (-0.6,0);
+	\draw[-][draw=black, very thick]	 (-0.4,0.5) -- (-0.6,0.5);
+	\draw[-][draw=black, very thick]	 (-0.6,0) -- (-0.6,0.5);
+	\node [left] at (-0.6,0.25) {Low};
+	
+	
+	\node [below] at (5,0) {In: 74HCT02};
+	\draw[-][draw=gray, line width=2mm] (5,0) -- (5,0.8);
+	\draw[-][draw=gray, line width=2mm] (5,2) -- (5,4.5);
+	\draw[-][draw=black, very thick] (5.2,0.8) -- (4.8,0.8) node[label=left:0.8 V](){};
+	\node [above] at (5.2,4.5) {4.5 V};
+	
+	\draw[-][draw=black, very thick] (5,0) -- (5,4.5);
+	\draw[-][draw=black, very thick] (4.9,2.25) -- (5.1,2.25);
+	\draw[-][draw=black, very thick] (4.8,0) -- (5.2,0);
+	\draw[-][draw=black, very thick] (4.8,4.5) -- (5.2,4.5);
+	\draw[-][draw=black, very thick] (5.4,0) -- (5.6,0);
+	\draw[-][draw=black, very thick] (5.2,2) -- (4.8,2);
+	\draw[-][draw=black, very thick] (5.4,0.8) -- (5.6,0.8);
+	\draw[-][draw=black, very thick] (5.6,0) -- (5.6,0.8);
+	\node [right] at (5.6,0.4) {Low};
+
+	\draw[-][draw=black, very thick] (5.4,2) -- (5.6,2);
+		\draw[-][draw=black, very thick] (5.4,4.5) -- (5.6,4.5);
+	\draw[-][draw=black, very thick] (5.6,2) -- (5.6,4.5);
+	\node [right] at (5.6,3.25) {High};
+	
+	\node [left] at (4.8,2) {2 V};	
+\end{tikzpicture}
+\end{center}
+\caption{Comparación de tecnologías con LS a la salida y HCT a la entrada.}
+\label{fig:lshct}
+\end{figure}
+
+Como era de esperarse, y debido a a que la compuerta 74HTC02 es compatible con la tecnología TTL, al reemplazar la HC por la HTC se soluciona el problema presentado previamente, ya que al comparar las Figuras (\ref{fig:lshc}) y (\ref{fig:lshct}), se observa que ya no existe una zona en la cual las tensiones de salida no son consideradas como validas por la entrada siguiente.
+
+Por otro lado, se destaca que en el caso de colocar la compuerta de tecnología HCT a la salida y la LS a la entrada, no genera cambios en el fanout, ya que solo se debe corregir los valores de $I_{OH}$ y $I_{OL}$, los cuales son los mismos que para la tecnología HC.
+
+\begin{center}
+	\textcolor{red}{\textbf{FANOUT CON LS EN LA SALIDA Y HCT EN LA ENTRADA.}}
 \end{center}
 
 \subsection{Desarrollo del circuito}
