--- a/Informe/Informe.tex
+++ b/Informe/Informe.tex
@@ -37,7 +37,7 @@
 %	\input{../Ejercicio-5/Ejercicio-5.tex}
 \newpage
 \section{Ejercicio 6}
-%	\input{../Ejercicio-6/Ejercicio-6.tex}
+	\input{../Ejercicio-6/Ejercicio-6.tex}
 \newpage
 \section{Ejercicio 7}
 %	\input{../Ejercicio-7/Ejercicio-7.tex}
