Avance con el ejercicio 2

--- a/Informe/Header.tex
+++ b/Informe/Header.tex
@@ -33,52 +33,10 @@
 \usepackage{fancyhdr}
 \usepackage{units} 
 
+\graphicspath{{../Ejercicio-1/}{../Ejercicio-2/}{../Ejercicio-3/}{../Ejercicio-4/}{../Ejercicio-5/}{../Ejercicio-6/}{../Ejercicio-7/}{../Ejercicio-8/}}
+
 \pagestyle{fancy}
 \fancyhf{}
 \lhead{22.13 Electrónica III}
 \rhead{Mechoulam, Lambertucci, Martorell, Londero}
 \rfoot{\center \thepage}
-
-%\usepackage[table,xcdraw]{xcolor}
-%\usepackage{amsmath}
-%\usepackage{amsfonts}
-%\usepackage{amssymb}
-%\usepackage{hyperref}
-%\usepackage{float}
-%\usepackage{graphicx}
-%
-%\usepackage{caption}
-%\usepackage{subcaption}
-%\captionsetup{compatibility=false}
-%
-%\usepackage{multirow}
-%\setlength{\doublerulesep}{\arrayrulewidth}
-%
-%\newcommand{\quotes}[1]{``#1''}
-%\newcommand\underrel[2]{\mathrel{\mathop{#2}\limits_{#1}}}
-%
-%\usepackage{array}
-%\newcolumntype{C}[1]{>{\centering\let\newline\\\arraybackslash\hspace{0pt}}m{#1}}
-%
-%\usepackage[american]{circuitikz}
-%\usepackage{xcolor}
-%\usepackage{fancyhdr}
-%
-%\newlength{\stockheight}
-%\usepackage{hyperref}
-%
-%\hypersetup{
-%    colorlinks=true,
-%    linkcolor=blue,
-%    filecolor=magenta,      
-%    urlcolor=blue,
-%    citecolor=blue,    
-%}
-%
-%\urlstyle{same}
-%
-%\usepackage{units} 
-%\pagestyle{fancy}
-%\fancyhf{}
-%
-%\rfoot{Página \thepage}
