Agregué punto2 al informe final

--- a/Ejercicio-1/Ejercicio-1.tex
+++ b/Ejercicio-1/Ejercicio-1.tex
@@ -127,14 +127,15 @@ Para realizar una comparación entre los modelos propuestos, se utilizarán los 
 High-level input voltage                  & 864 mV         & 2.49 V           & 595 mV                            \\
 Low-level input voltage                   & 454 mV         & 1.95 V           & 413 mV                            \\
 High-level Output voltage                 & 4.96 V         & 4.89 V           & 4.96 V                            \\
-Low-level Output voltage                  & 191 mV         & 72.1 mV          & 34.5mV                            \\
+Low-level Output voltage                  & 191 mV         & 72.1 mV          & 34.5 mV                            \\
 Noise Margin High                         & 4.01 V         & 2.34 V           & 4.37 V                            \\
 Noise Margin Low                          & 263 mV         & 1.88 V           & 378 mV                            \\
-Propagation delay High to Low             & 76.93 nS       & 569.51 nS        & 1.82 nS                           \\
-Propagation delay Low to High             & 2.0489 $\mu S$ & 1.33 $\mu S$     & 535 nS                            \\
-Transition delay High to Low              & 87.28 nS       & 734.4 nS         & 38.36 nS                          \\
-Transition delay Low to High              & 605 nS         & 909 nS           & 307 nS                            \\
-Maximum output current                    & 184.4  $\mu A$ &    217 $\mu A$              &                                  135.5$\mu A$ 	
+Propagation delay High to Low             & 76.93 ns       & 569.51 ns        & 1.82 ns                           \\
+Propagation delay Low to High             & 2.0489 $\mu s$ & 1.33 $\mu s$     & 535 ns                            \\
+Transition delay High to Low              & 87.28 ns       & 734.4 ns         & 38.36 ns                          \\
+Transition delay Low to High              & 605 ns         & 909 ns           & 307 ns                            \\
+Maximum output current                    & 184.4  $\mu A$ &    217 $\mu A$              &                                  135.5 $\mu A$ 	\\
+\hline
 \end{tabular}
 \end{table}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -150,11 +151,12 @@ High-level Output voltage                 & 4.98 V        & 4.86 V          & 4.
 Low-level Output voltage                  & 278 mV        & 151 mV           & 72 mV                             \\
 Noise Margin High                         & 4.14 V        & 2.52 V           & 4.32 V                            \\
 Noise Margin Low                          & 200.7 mV      & 514.9 mV         & 417.3 mV                          \\
-Propagation delay High to Low             & 260.7 nS      & 625.7 nS         & 33.6 nS                           \\
-Propagation delay Low to High             & 2.615 $\mu S$ & 1.652 $\mu S$    & 1.216 $\mu S$                     \\
-Transition delay High to Low              & 183.817 nS    & 417.19 nS        & 73.12 nS                          \\
-Transition delay Low to High              & 2.691 $\mu S$ & 2.831 $\mu S$    & 2.687 $\mu S$                     \\
-Maximum output current                    &  187.2 $\mu A$             &     216 $\mu A$             &   135.2 $\mu A$                               
+Propagation delay High to Low             & 260.7 ns      & 625.7 ns         & 33.6 ns \\
+Propagation delay Low to High             & 2.615 $\mu s$ & 1.652 $\mu s$    & 1.216 $\mu s$                     \\
+Transition delay High to Low              & 183.817 ns    & 417.19 ns        & 73.12 ns                          \\
+Transition delay Low to High              & 2.691 $\mu s$ & 2.831 $\mu s$    & 2.687 $\mu s$                     \\
+Maximum output current                    &  187.2 $\mu A$             &     216 $\mu A$             &   135.2 $\mu A$       \\
+\hline                        
 \end{tabular}
 \end{table}
  
