Agregué comparación de tensiones en el ejercicio 2

--- a/Ejercicio-2/Ejercicio-2.tex
+++ b/Ejercicio-2/Ejercicio-2.tex
@@ -336,3 +336,15 @@ De la misma forma que se realizó para la conexión 74HC02 - 74LS02, se mide la 
 Es así que comparando las Figuras (\ref{fig:medicion1}) y (\ref{fig:medicion2}), se denota como se solventa el problema existente de compatibilidad. En el segundo caso, al ser las compuertas compatibles, estas no se sobrecargan entre sí y no existen problemas de tensiones, logrando que la imagen se vea mucho mejor.
 
 Por otro lado, se destaca que en el caso de colocar la compuerta de tecnología HCT a la salida y la LS a la entrada, no genera cambios en el fanout, ya que solo se debe corregir los valores de $I_{OH}$ y $I_{OL}$, los cuales son los mismos que para la tecnología HC.
+
+Finalmente, se presentan las relaciones de tensiones de entrada y salida medidas, variando las combinaciones de tecnologías posibles, para las cuales se empleó un suavizado exponencial para poder obtener mediciones apreciables.
+\begin{figure}[H]
+\centering
+	\includegraphics[width=0.8\textwidth]{ImagenesEjercicio2/Xy.png}
+\caption{Entradas y salidas de las compuertas.}
+\label{fig:medicion2}
+\end{figure}
+
+\begin{center}
+	\textcolor{red}{\textbf{AGREGAR CONCLUSIÓN PARA LA ÚLTIMA IMAGEN.}}
+\end{center}
